# browserinterminal

./: .gitignore  CMakeLists.txt  README.md  browserinterminal.cpp  browserinterminal.h  main.c
cases/: case6.in  case6.out  case8.out  sample10.in  sample11.in  sample12.in  sample14.in  sample15.in  sample16.in  sample3.in  sample4.in  sample5.in  sample6.in  sample7.in  sample8.in  sample8.out
include/: buffer.h  console.h  defs.h  dom.h  framebuffer.h  io.h  render.h  style.h  type.h  utils.h
src/: buffer.c  console.c  dom.c  framebuffer.c  io.c  render.c  style.c  utils.c
test/: test.cpp
tests/: test1.in
